<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="13"
    android:background="#606060"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:layout_weight="1"
        android:gravity="end"
        android:id="@+id/tvInputList"
        android:textColor="#FFFFFF"
        android:background="#404040"
        android:textSize="18sp"
        android:letterSpacing="0.06"
        android:text="" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:paddingEnd="15dp"
        android:layout_weight="2"
        android:gravity="end"
        android:id="@+id/tvMain"
        android:text="@string/display"
        android:textColor="#FFFFFF"
        android:background="#404040"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:background="#606060"
        android:weightSum="4">

        <Button
            android:id="@+id/btnBackspace"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:backgroundTint="#434343"
            android:insetLeft="4dp"
            android:insetTop="2dp"
            android:insetRight="2dp"
            android:insetBottom="2dp"
            android:onClick="backspaceBtn"
            android:text="@string/backspace"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#434343"
            android:insetLeft="2dp"
            android:insetTop="2dp"
            android:insetRight="2dp"
            android:insetBottom="2dp"
            android:onClick="clearBtn"
            android:text="@string/clear"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnRoot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#434343"
            android:insetLeft="2dp"
            android:insetTop="2dp"
            android:insetRight="2dp"
            android:insetBottom="2dp"
            android:onClick="rootBtn"
            android:text="@string/root"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#434343"
            android:insetLeft="2dp"
            android:insetTop="2dp"
            android:insetRight="4dp"
            android:insetBottom="2dp"
            android:onClick="divideBtn"
            android:text="@string/divide"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:background="#606060"
        android:weightSum="4">

        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#434343"
            android:insetLeft="4dp"
            android:insetTop="2dp"
            android:insetRight="2dp"
            android:insetBottom="2dp"
            android:onClick="sevenBtn"
            android:text="@string/seven"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#434343"
            android:insetLeft="2dp"
            android:insetTop="2dp"
            android:insetRight="2dp"
            android:insetBottom="2dp"
            android:onClick="eightBtn"
            android:text="@string/eight"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#434343"
            android:insetLeft="2dp"
            android:insetTop="2dp"
            android:insetRight="2dp"
            android:insetBottom="2dp"
            android:onClick="nineBtn"
            android:text="@string/nine"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#434343"
            android:insetLeft="2dp"
            android:insetTop="2dp"
            android:insetRight="4dp"
            android:insetBottom="2dp"
            android:onClick="multiplyBtn"
            android:text="@string/multiply"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:background="#606060"
        android:weightSum="4">

        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#434343"
            android:insetLeft="4dp"
            android:insetTop="2dp"
            android:insetRight="2dp"
            android:insetBottom="2dp"
            android:onClick="fourBtn"
            android:text="@string/four"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#434343"
            android:insetLeft="2dp"
            android:insetTop="2dp"
            android:insetRight="2dp"
            android:insetBottom="2dp"
            android:onClick="fiveBtn"
            android:text="@string/five"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#434343"
            android:insetLeft="2dp"
            android:insetTop="2dp"
            android:insetRight="2dp"
            android:insetBottom="2dp"
            android:onClick="sixBtn"
            android:text="@string/six"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#434343"
            android:insetLeft="2dp"
            android:insetTop="2dp"
            android:insetRight="4dp"
            android:insetBottom="2dp"
            android:onClick="minusBtn"
            android:text="@string/minus"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:background="#606060"
        android:weightSum="4">

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#434343"
            android:insetLeft="4dp"
            android:insetTop="2dp"
            android:insetRight="2dp"
            android:insetBottom="2dp"
            android:onClick="oneBtn"
            android:text="@string/one"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#434343"
            android:insetLeft="2dp"
            android:insetTop="2dp"
            android:insetRight="2dp"
            android:insetBottom="2dp"
            android:onClick="twoBtn"
            android:text="@string/two"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#434343"
            android:insetLeft="2dp"
            android:insetTop="2dp"
            android:insetRight="2dp"
            android:insetBottom="2dp"
            android:onClick="threeBtn"
            android:text="@string/three"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#434343"
            android:insetLeft="2dp"
            android:insetTop="2dp"
            android:insetRight="4dp"
            android:insetBottom="2dp"
            android:onClick="plusBtn"
            android:text="@string/plus"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:background="#606060"
        android:weightSum="4">

        <Button
            android:id="@+id/btnPlusMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#434343"
            android:insetLeft="4dp"
            android:insetTop="2dp"
            android:insetRight="2dp"
            android:insetBottom="4dp"
            android:onClick="plusMinusBtn"
            android:text="@string/plusMinus"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#434343"
            android:insetLeft="2dp"
            android:insetTop="2dp"
            android:insetRight="2dp"
            android:insetBottom="4dp"
            android:onClick="zeroBtn"
            android:text="@string/zero"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnComma"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#434343"
            android:insetLeft="2dp"
            android:insetTop="2dp"
            android:insetRight="2dp"
            android:insetBottom="4dp"
            android:onClick="commaBtn"
            android:text="@string/comma"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#434343"
            android:insetLeft="2dp"
            android:insetTop="2dp"
            android:insetRight="4dp"
            android:insetBottom="4dp"
            android:onClick="equalBtn"
            android:text="@string/equal"
            android:textSize="30sp" />
    </LinearLayout>

</LinearLayout>